--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,10 +1,10 @@
 name: Release
 
-# on:
-#   schedule:
-#     # * is a special character in YAML so you have to quote this string
-#     - cron: "0 */6 * * *"
-on: [push]
+on:
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron: "0 */6 * * *"
+# on: [push]
 
 jobs:
   release:
